WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66662
Text-indent and floats push the text out of the container box
https://bugs.webkit.org/show_bug.cgi?id=66662
Summary
Text-indent and floats push the text out of the container box
Alexandru Chiculita
Reported
2011-08-22 06:04:34 PDT
Created
attachment 104667
[details]
Test file LineWidth::shrinkAvailableWidthForNewFloatIfNeeded is updating the m_left, m_right properties, but is not taking into account that m_isFirstLine is true and the text indent may apply. The break iterator will actually think that the available width is very large, but RenderBlock::computeInlineDirectionPositionsForLine is using the correct values. See test document for more info.
Attachments
Test file
(234 bytes, text/html)
2011-08-22 06:04 PDT
,
Alexandru Chiculita
no flags
Details
Patch V1
(9.11 KB, patch)
2011-08-23 01:04 PDT
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
Patch V2
(33.69 KB, patch)
2011-08-23 05:22 PDT
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexandru Chiculita
Comment 1
2011-08-23 01:04:32 PDT
Created
attachment 104798
[details]
Patch V1
Hajime Morrita
Comment 2
2011-08-23 03:51:32 PDT
Comment on
attachment 104798
[details]
Patch V1 View in context:
https://bugs.webkit.org/attachment.cgi?id=104798&action=review
> LayoutTests/ChangeLog:11 > + * fast/block/float/floats-and-text-indent.html: Added.
Please put expectation files under platform directory. Layout related tests are rarely portable between platforms.
Alexandru Chiculita
Comment 3
2011-08-23 05:22:30 PDT
Created
attachment 104825
[details]
Patch V2 Moved expected results to platform mac.
Dave Hyatt
Comment 4
2011-08-23 12:20:26 PDT
Comment on
attachment 104825
[details]
Patch V2 r=me
WebKit Review Bot
Comment 5
2011-08-23 12:38:19 PDT
Comment on
attachment 104825
[details]
Patch V2 Clearing flags on attachment: 104825 Committed
r93626
: <
http://trac.webkit.org/changeset/93626
>
WebKit Review Bot
Comment 6
2011-08-23 12:38:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug