Text-indent and floats push the text out of the container box https://bugs.webkit.org/show_bug.cgi?id=66662

Source/WebCore:

Text indent was not propagated when a new float was pushed on the line.
It was only calculated when the logicalLeft/RightOffsetForLine was called.
Because of that RenderBlock::LineBreaker::nextLineBreak used a bigger width
than actually available and made the line render on top of the borders.

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-23
Reviewed by David Hyatt.

Tests: fast/block/float/floats-and-text-indent-rl.html
       fast/block/float/floats-and-text-indent.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::textIndentOffset):
(WebCore::RenderBlock::logicalLeftOffsetForLine):
(WebCore::RenderBlock::logicalRightOffsetForLine):
* rendering/RenderBlock.h:
* rendering/RenderBlockLineLayout.cpp:
(WebCore::LineWidth::shrinkAvailableWidthForNewFloatIfNeeded):

LayoutTests:

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-23
Reviewed by David Hyatt.

* fast/block/float/floats-and-text-indent-rl.html: Added.
* fast/block/float/floats-and-text-indent.html: Added.
* platform/chromium/test_expectations.txt:
* platform/gtk/Skipped:
* platform/mac/fast/block/float/floats-and-text-indent-expected.png: Added.
* platform/mac/fast/block/float/floats-and-text-indent-expected.txt: Added.
* platform/mac/fast/block/float/floats-and-text-indent-rl-expected.png: Added.
* platform/mac/fast/block/float/floats-and-text-indent-rl-expected.txt: Added.
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/82602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93626 268f45cc-cd09-0410-ab3c-d52691b4dbfc